// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsideSection /> With minimal options matches snapshot 1`] = `
<div
  className="y-aside-section"
>
  <Block>
    <FixedGridRow
      bottomSpacing="small"
      className="y-aside-section--header"
      gutterSize="small"
    >
      <FixedGridColumn
        fixed={true}
      >
        <Heading
          level="2"
          size="none"
        >
          <Text
            bold={true}
            color="secondary"
            size="mediumSub"
          >
            Test title
          </Text>
        </Heading>
      </FixedGridColumn>
    </FixedGridRow>
  </Block>
  <div />
</div>
`;

exports[`<AsideSection /> with action prop renders the action in its own FixedGridColumn 1`] = `
<div
  className="y-aside-section"
>
  <Block>
    <FixedGridRow
      bottomSpacing="small"
      className="y-aside-section--header"
      gutterSize="small"
    >
      <FixedGridColumn
        fixed={true}
      >
        <Heading
          level="2"
          size="none"
        >
          <Text
            bold={true}
            color="secondary"
            size="mediumSub"
          >
            Test title
          </Text>
        </Heading>
      </FixedGridColumn>
      <FixedGridColumn
        className="y-aside-section--action"
      >
        <Text
          size="small"
        >
          <Clickable>
            Add
          </Clickable>
        </Text>
      </FixedGridColumn>
    </FixedGridRow>
  </Block>
  <div />
</div>
`;

exports[`<AsideSection /> with children matches the snapshot 1`] = `
<div
  className="y-aside-section"
>
  <Block>
    <FixedGridRow
      bottomSpacing="small"
      className="y-aside-section--header"
      gutterSize="small"
    >
      <FixedGridColumn
        fixed={true}
      >
        <Heading
          level="2"
          size="none"
        >
          <Text
            bold={true}
            color="secondary"
            size="mediumSub"
          >
            Test title
          </Text>
        </Heading>
      </FixedGridColumn>
    </FixedGridRow>
  </Block>
  <div>
    <div>
      Child Content
    </div>
  </div>
</div>
`;
